carddeck-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carddeck-webapp-deployment
  labels:
    app: carddeck-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: carddeck-webapp
  template:
    metadata:
      labels:
        app: carddeck-webapp
    spec:
      containers:
      - name: carddeck-webapp-container
        image: your-registry/carddeck-webapp:latest
        ports:
        - containerPort: 80
