carddeck-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carddeck-webapp
spec:
  selector:
    app: carddeck-webapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
  externalIPs:
  - 10.0.0.1
