carddeck-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /carddeck
        pathType: Prefix
        backend:
          service:
            name: carddeck-webapp-service
            port:
              name: http
      - path: /other
        pathType: Prefix
        backend:
          service:
            name: my-other-service
            port:
              name: http
